# myxa

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: app.json  euler.json  flatty.json  interlet.json  primary_index.json  secondary_index.json
examples/pizza/: package.json
src/myxa/: __init__.py  checker.py  cli.py  dependency.py  errors.py  extra_types.py  extractor.py  index.py  main.py  manager.py  models.py  nodes.py  package.py  pin.py  printer.py  resolver.py  solver.py  version.py
src/myxa/code/: geometry.py
src/myxa/code/cooking/: recipe.py
tests/: conftest.py  test_checker.py  test_dependency.py  test_index.py  test_manager.py  test_models.py  test_package.py  test_pin.py  test_printer.py  test_resolver.py  test_solver.py  test_version.py
